# nova-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  TASKS.md  docker-compose.yml  render.yaml
crates/kova-kafka/: Cargo.toml
crates/kova-kafka/src/: consumer.rs  error.rs  lib.rs  producer.rs
crates/kova-kafka/tests/: integration_test.rs
crates/kova-types/: Cargo.toml
crates/kova-types/src/: entities.rs  errors.rs  ids.rs  kyc.rs  lib.rs  macros.rs  money.rs  payment.rs
crates/kova-types/src/events/: account.rs  card.rs  fraud.rs  kyc.rs  ledger.rs  mod.rs  notification.rs  payment.rs
docker/: mysql-init.sql
docs/: architecture.md  database-plan.md  internal-auth.md  kafka-topics.yaml  service-map.md
proto/: kova_account.proto  kova_auth.proto  kova_fraud.proto  kova_fx.proto  kova_kyc.proto  kova_ledger.proto  kova_payments.proto
services/kova-account/: Cargo.toml  Dockerfile
services/kova-account/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_account_number_seq_and_currencies.up.sql
services/kova-account/src/: clients.rs  error.rs  lib.rs  main.rs  router.rs  state.rs  state_machine.rs
services/kova-account/src/handlers/: balance.rs  close.rs  create.rs  get.rs  health.rs  mod.rs  statement.rs
services/kova-audit/: Cargo.toml
services/kova-audit/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql
services/kova-audit/src/: lib.rs
services/kova-auth/: Cargo.toml  Dockerfile
services/kova-auth/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_session_access_token_jti.up.sql
services/kova-auth/src/: crypto.rs  error.rs  lib.rs  main.rs  router.rs  sms.rs  state.rs  tokens.rs
services/kova-auth/src/handlers/: biometric.rs  device.rs  health.rs  mod.rs  otp.rs  pin.rs  register.rs  token.rs
services/kova-cards/: Cargo.toml
services/kova-cards/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql
services/kova-cards/src/: lib.rs
services/kova-fraud/: Cargo.toml
services/kova-fraud/src/: lib.rs
services/kova-fx/: Cargo.toml
services/kova-fx/src/: lib.rs
services/kova-gateway/: Cargo.toml  Dockerfile  routes.md
services/kova-gateway/src/: error.rs  main.rs  router.rs  state.rs
services/kova-gateway/src/handlers/: stubs.rs
services/kova-gateway/src/middleware/: auth.rs  circuit_breaker.rs  rate_limit.rs  tracing.rs
services/kova-kyc/: Cargo.toml
services/kova-kyc/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql
services/kova-kyc/src/: lib.rs
services/kova-ledger/: Cargo.toml  Dockerfile  build.rs
services/kova-ledger/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_outbox_and_payload_hash.up.sql
services/kova-ledger/src/: balance.rs  error.rs  idempotency.rs  lib.rs  main.rs  outbox.rs  posting.rs  reconciliation.rs  server.rs  statement.rs
services/kova-notifications/: Cargo.toml
services/kova-notifications/src/: lib.rs
services/kova-payments/: Cargo.toml
services/kova-payments/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql
services/kova-payments/src/: lib.rs
services/kova-reconciliation/: Cargo.toml
services/kova-reconciliation/src/: lib.rs
