[workspace]
resolver = "2"
members = [
    "crates/kova-types",
    "services/kova-auth",
    "services/kova-account",
    "services/kova-ledger",
    "services/kova-payments",
    "services/kova-cards",
    "services/kova-kyc",
    "services/kova-fraud",
    "services/kova-fx",
    "services/kova-notifications",
    "services/kova-reconciliation",
    "services/kova-audit",
]

# Workspace-level dependency versions — all service crates inherit via { workspace = true }
[workspace.dependencies]
kova-types = { path = "crates/kova-types" }
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
    "macros",
] }

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Money
rust_decimal = { version = "1", features = ["serde-str"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
