[package]
name = "kova-account"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kova-account"
path = "src/main.rs"

[lib]
name = "kova_account"
path = "src/lib.rs"

[dependencies]
kova-types         = { workspace = true }
tokio              = { workspace = true }
sqlx               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
redis              = { workspace = true }
jsonwebtoken       = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
rust_decimal       = { workspace = true }
async-trait        = { workspace = true }
http               = { workspace = true }
base64             = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
