[package]
name = "kova-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kova-auth"
path = "src/main.rs"

[lib]
name = "kova_auth"
path = "src/lib.rs"

[dependencies]
kova-types         = { workspace = true }
tokio              = { workspace = true }
sqlx               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
redis              = { workspace = true }
jsonwebtoken       = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
argon2             = { workspace = true }
bcrypt             = { workspace = true }
ring               = { workspace = true }
hex                = { workspace = true }
phonenumber        = { workspace = true }
http               = { workspace = true }
async-trait        = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }
