[package]
name = "kova-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
kova-types   = { workspace = true }
tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
