[package]
name = "kova-ledger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kova-ledger"
path = "src/main.rs"

[lib]
name = "kova_ledger"
path = "src/lib.rs"

[dependencies]
kova-types   = { workspace = true }
kova-kafka   = { workspace = true, optional = true }
tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
uuid         = { workspace = true }
ring         = { workspace = true }
hex          = { workspace = true }
base64       = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tonic           = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }
jsonwebtoken    = { workspace = true }

[features]
kafka = ["kova-kafka"]

[build-dependencies]
tonic-build = "0.12"
